# AirCombat

./: .gitignore  Bullet.gd  Bullet.gdns  Bullet.tscn  Enemy.gd  Enemy.gdns  Enemy.tscn  Explosion.tscn  GameScene.gd  GameScene.gdns  GameScene.tscn  LICENSE  Player.gd  Player.gdns  PlayerRoot.tscn  README.md  TODO.org  TitleScene.tscn  TitleScreen.gd  TitleScreen.gdns  game_state.gdns  globals.gd  project.godot  rust_library.tres
assets/graphics/bg/: farground_cloud_1.png.import  farground_cloud_2.png.import  farground_mountains.png.import  foreground_mountains.png.import  mid_ground_cloud_1.png.import  mid_ground_cloud_2.png.import  midground_mountains.png.import
assets/graphics/bullet/: bullet.png.import  flame.png.import  flame1.png.import  flame2.png.import
assets/graphics/enemies/: enemy1_blue.png.import  enemy1_green.png.import  enemy1_red.png.import  enemy1_yellow.png.import  enemy2_blue.png.import  enemy2_pink.png.import  enemy2_red.png.import  enemy2_yellow.png.import
assets/graphics/explosion/: explosion.png.import
assets/graphics/player/: Player128_blue.png.import  Player128_green.png.import  Player128_red.png.import  Player128_yellow.png.import
assets/graphics/title/: title.png.import
src/air_combat/: Cargo.toml
src/air_combat/src/: bullet.rs  enemy.rs  game_scene.rs  game_state.rs  lib.rs  player.rs  title_screen.rs  util.rs
