[package]
name = "air_combat"
version = "0.1.0"
authors = ["Eric Smith <paytonrules@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.9.0-preview.0"
euclid = "0.20.1"

[lib]
crate-type = ["cdylib"]
